Fixed popup overflow

--- a/src/Components/article.scss
+++ b/src/Components/article.scss
@@ -9,6 +9,15 @@
 	height: 1em;
 }
 
+.css-1wnsr1i {
+	width: min(90%, 30em) !important;
+	border: none !important;
+	height: fit-content;
+	max-height: 90%;
+	overflow: auto;
+
+}
+
 .article {
 	border-bottom: 1px solid rgba(41, 41, 41, 0.144);
 
